Prevents images in module-level doc comments from overflowing their container

--- a/assets/style.css
+++ b/assets/style.css
@@ -142,6 +142,10 @@ pre {
   margin-bottom: 0.5px
 }
 
+.markdown-block img {
+  max-width: 100%;
+}
+
 .docs-block {
   border-top: 1px solid #eeeeee;
   margin-top: 1em;
